--- a/twosides.tex
+++ b/twosides.tex
@@ -12,8 +12,8 @@ This combines the central aspects of bandits with compliance awareness (a sequen
 Bounded regret algorithms with compliance awareness can be seen as addressing the special case where the experts signals are known apriori to be uninformative, and thus only the experience can be learned from.
 
 Our one-decision mechanism is the special case for $T={1}$, thus there is no role for exploration or learning from experience, since there are no future decisions  to help inform.
-When experts allways report truthfully their signals, and they have no knowledge over how to aggregate them that the subject/mechanism does have,  this is eqivalent to a compliance-aware contextual bandit problem. 
-When contexts are constant accross all timesteps it further reduces to bandit problem with compliance awareness.
+When experts always report truthfully their signals, and they have no knowledge over how to aggregate them that the subject/mechanism does have,  this is eqivalent to a compliance-aware contextual bandit problem. 
+When contexts are constant across all time steps it further reduces to bandit problem with compliance awareness.
 When subject always follows the mechanism or $a$ cannot be observed it reduces to the standard multi armed bandit problem. 
 
  
@@ -25,15 +25,15 @@ Not only does it require imposing strong assumptions on the information structur
 One argument is that no-regret dynamics push to the Nash Bayes set, 
 
 
-Theory provides a useful guide for the structure of the mechanism and it's buidling blocks.
+Theory provides a useful guide for the structure of the mechanism and it's building blocks.
 Further, we can 
 We take a compositional approach, attempting as much as possible to reuse existing algorithms and mechanisms.
 
 
 
-We build up to the main practical design by analysing two simplified models that illustrate the two key characteristics of our mechanism. 
+We build up to the main practical design by analyzing two simplified models that illustrate the two key characteristics of our mechanism. 
 First , to create the right incentives for motivating exploratory choices, we show that the rewards from the choice of action should be linked not just to the reward on the period it is taken, but to the full stream of future rewards after it.
-Seccond, to aggregate signals without having the mechanism or all  experts require access to a good prior, we how offline contextual bandit algorithms and their guarantees can be used to evaluate the counterfactual value of a given experts signa.
+Second, to aggregate signals without having the mechanism or all  experts require access to a good prior, we how offline contextual bandit algorithms and their guarantees can be used to evaluate the counterfactual value of a given experts signal.
 We finish by presenting a mechanism that combines both ideas, and explore some of its limitations.
 
 %(which can be taken as strong benchmark tha the bidding mechanisms can attempt to approximate).
@@ -75,7 +75,7 @@ At the end of the final period the mechanism makes payments to the experts $pi_i
 \section{A Sequence of repeated one-shot-efficient mechanisms is inefficient}
 
 
-Even with access to the prior by the mechanism (where the VCG styl mechanisms provide efficiency) or in situations in which the bidding mechanism is efficient in the one shot case, repeated use of such mechanisms fails to achieve the efficient outcome in the sequential setting. 
+Even with access to the prior by the mechanism (where the VCG style mechanisms provide efficiency) or in situations in which the bidding mechanism is efficient in the one shot case, repeated use of such mechanisms fails to achieve the efficient outcome in the sequential setting. 
 
 Running the (single subject) efficient direct action elicitation mechanism repeatedly, results in choosing the arm with the maximum posterior expected reward at each step $t$ and using the payment rule:
 
@@ -94,10 +94,10 @@ The repeated use of single-subject-efficient mechanism thus is equivalent to a f
 No exploration with truthful reports in the repeated single subject VCG style mechanism.
 \end{lem}
 
-This is inmediate from the definition of the single subject VCG style mechanism: it selects the arm that maximizes the rewards for that period given the reports, if the reports are turhtful this is the ihghest expected reward arm on that period. 
+This is immediate from the definition of the single subject VCG style mechanism: it selects the arm that maximizes the rewards for that period given the reports, if the reports are truthful this is the highest expected reward arm on that period. 
 
 \begin{defn}[full disclosure]
-We say an optimal decision elicitation mechanism has \emph{full disclosure} if all experts recieve feedback about the value of $c_t$, $a_t$ and $r_t$ in every period.
+We say an optimal decision elicitation mechanism has \emph{full disclosure} if all experts receive feedback about the value of $c_t$, $a_t$ and $r_t$ in every period.
 \end{defn}
 
 
@@ -107,7 +107,7 @@ We say an optimal decision elicitation mechanism has \emph{full disclosure} if a
 
 More broadly
 
-\NDP{There are situations (like a expert has the signal needed to unlock for each peirod the meaning of the signals) where we do get exploration, so this needs to be softened....}
+\NDP{There are situations (like a expert has the signal needed to unlock for each period the meaning of the signals) where we do get exploration, so this needs to be softened....}
 \begin{lem}
 No Exploration with full disclosure in the repeated one shot second price bidding mechanism.
 \end{lem}
@@ -115,13 +115,13 @@ No Exploration with full disclosure in the repeated one shot second price biddin
 
 
 On possible attempt to fix this would be by only revealing the outcome to the winning bidder, thus allowing them to internalize the informational advantage in future rounds payoffs. 
-This  internalizies the benefits of explorations, yet it prevents the other experts from learning in those rounds when they do not win, severely limiting the situations in which the mechanism can be efficient. 
+This  internalizes the benefits of explorations, yet it prevents the other experts from learning in those rounds when they do not win, severely limiting the situations in which the mechanism can be efficient. 
 More generally, partial revelation policies, where only some of the periods are revealed (in the style of  \cite{mansour2015bayesian} ) are also inefficient in general. 
  
-\NDP{Can we characterize when this inneficiency arises? it seems very general through clealry not always; basically the experts need to learn (their signals dont point a priri the optimal action bt the mapping cna be learnt from experience) and the signals are spread outbetween different experts (if there is a single one)}
+\NDP{Can we characterize when this inefficiency arises? it seems very general through clearly not always; basically the experts need to learn (their signals dont point a priri the optimal action but the mapping can be learnt from experience) and the signals are spread out between different experts (if there is a single one)}
 
-For many problems the sequential use of mechanisms while suboptimal is not too bad inthe sense that the loss of efficincy fo the mechanism can be bounded relative to the optimum (see background chapter for a brief overvie of such results).
-This is not the case for sequential optimal action elicitaiton. Repeating any efficient one shot mechanism can lead to linearly worse performance than the optimal sequential mechanism on the same problem. In Example~\ref{eg:2regimes} the regret of the  seccond price bidding mechanism is $0.25(T-1)$ since the first agent wins and selects the optimal arm given his information set.
+For many problems the sequential use of mechanisms while suboptimal is not too bad in the sense that the loss of efficiency of the mechanism can be bounded relative to the optimum (see background chapter for a brief overview of such results).
+This is not the case for sequential optimal action elicitation. Repeating any efficient one shot mechanism can lead to linearly worse performance than the optimal sequential mechanism on the same problem. In Example~\ref{eg:2regimes} the regret of the  second price bidding mechanism is $0.25(T-1)$ since the first agent wins and selects the optimal arm given his information set.
 
 
 
@@ -137,7 +137,7 @@ This is not the case for sequential optimal action elicitaiton. Repeating any ef
 
 
 
-One approach would be to seek a direct mechanism which internatilizes exploration; this is in theory relatively straightfoward, the dynamic VCG style mechansim , however, the requirements that the mechanism now have access tot he common prior over sequences makes it completly impractical.
+One approach would be to seek a direct mechanism which internalizes exploration; this is in theory relatively straightforward, the dynamic VCG style mechanism , however, the requirements that the mechanism now have access tot he common prior over sequences makes it completely impractical.
 
 % TODO ? you  have to take the expected value of the future rewards with the others signals but without exploration as the baseline which to reward?
 
@@ -145,7 +145,7 @@ One approach would be to seek a direct mechanism which internatilizes exploratio
 
 \section{A Simple Bidding Mechanism with Exploration}
 
-To overcome this limitations of the repeated mechanism, we present a bid based mechanism that is efficient under sufficient conditions that suitably generalize those of bid based mechansims in the one shot case. 
+To overcome this limitations of the repeated mechanism, we present a bid based mechanism that is efficient under sufficient conditions that suitably generalize those of bid based mechanisms in the one shot case. 
 
 \begin{mech}[Bidding for ownership of choice Mechanism]
 
@@ -170,9 +170,9 @@ Denote by $o_{i,t}$ a indicator variable encoding with a value of $1$ if the age
 \end{mech}
 
 
-The first part of payments sums over the rewards for all periods during which an agent owns the rights, the seccond part determines the payments, when a new agent $i$ becomes th owner, they pay out the seccond highest bid of that period, while when another agent takes over them as the owner they are payed the seccond highest bid in that period. Note that the reserve price can be encoded in the owners bid in this notation; since when it wins there is no change in owner no payments are made. 
+The first part of payments sums over the rewards for all periods during which an agent owns the rights, the second part determines the payments, when a new agent $i$ becomes th owner, they pay out the second highest bid of that period, while when another agent takes over them as the owner they are payed the second highest bid in that period. Note that the reserve price can be encoded in the owners bid in this notation; since when it wins there is no change in owner no payments are made. 
 
-This linking of payments address the incentive problem by internalizing the positive intertemporal information externality created by selecting actions that have not previously been selected.
+This linking of payments address the incentive problem by internalizing the positive inter-temporal information externality created by selecting actions that have not previously been selected.
 
 
 Returning to Example~\ref{eg:2regimes}, this mechanism in an equilibrium has bounded regret relative to the 
@@ -182,7 +182,7 @@ No Exploration (in equilibrium) with full disclosure in the repeated one shot se
 \end{lem}
 
 \begin{proof}
-Example~\ref{eg:2regimes} is a witness. If we have full disclosure then if agent 1 is the highest bidder they always plays the action with expected reward $0.75$. If one of the other agents wins and chooses to explore, they gain the same information as the non-winning other agent, and in the next period both have (in expectation) the same valuation, thus the seccond price bid is the same as the first price, and the expected payments to the agent are 0, while the payment to win over the first agent must be $\alpha 0.75$ and the expected payment $\alpha 0.5033$
+Example~\ref{eg:2regimes} is a witness. If we have full disclosure then if agent 1 is the highest bidder they always plays the action with expected reward $0.75$. If one of the other agents wins and chooses to explore, they gain the same information as the non-winning other agent, and in the next period both have (in expectation) the same valuation, thus the second price bid is the same as the first price, and the expected payments to the agent are 0, while the payment to win over the first agent must be $\alpha 0.75$ and the expected payment $\alpha 0.5033$
 \end{proof}
 
 %the ideal seems to be something where we just have to learn from past not aggregate. for example if all experts get the same signals and better than the subjects prior.
@@ -242,18 +242,18 @@ Interestingly the sequential version of the problem opens up aggregation in the 
 The reason why we need the prior in the one shot case to be able to evaluate the contribution the signal makes to picking an action with good rewards; since we observe a single action there is no way to estimate this without using a prior. 
 
 We now consider a setting where the experts submit their signals, however, unlike in the .
- While we saw that there was a revelating equilibrium, the mechanism failed the property of paying for useless experts. We show that the repeated nature of the problem can be used to overcome payments to useless experts. 
+ While we saw that there was a truthful equilibrium, the mechanism failed the property of paying for useless experts. We show that the repeated nature of the problem can be used to overcome payments to useless experts. 
 
-We do this in two parts; by reducing the problem to a contextual bandit algorithm where the context is determined by the signals reported by all experts, and then using the randomization used by such algorithms to construct unbiased estimators of the gain in rewards brough about by a given agents signals, and making their reward proportional to this.
+We do this in two parts; by reducing the problem to a contextual bandit algorithm where the context is determined by the signals reported by all experts, and then using the randomization used by such algorithms to construct unbiased estimators of the gain in rewards brought about by a given agents signals, and making their reward proportional to this.
 
 \DBA{you need to insert a mini-survey of the contextual bandit literature. As I understand it, it's only recently (Langford's last few papers) that we've gotten to the point where contextual bandits are fully usable}
 
-Assume that the subjects arrive IID. Use an unbiased contextual bandit algorithm evlauation strategy such as \cite{li2011unbiased}  Algorithm 2 and a contextual bandit algorithm (such as \cite{syrgkanis2016efficient}) to learn to use the reported signals. %http://arxiv.org/pdf/1003.5956.pdf 
+Assume that the subjects arrive IID. Use an unbiased contextual bandit algorithm evaluation strategy such as \cite{li2011unbiased}  Algorithm 2 and a contextual bandit algorithm (such as \cite{syrgkanis2016efficient}) to learn to use the reported signals. %http://arxiv.org/pdf/1003.5956.pdf 
 \NDP{TODO: explicitly insert the adapted version (with probability weights in our notation)}
 
 
 \begin{mech}\label{mech:bandit}[Signals without Priors]
-Inputs: A contextial bandit algorithm $A$ and an unbiassed offline evaluation algorithm $E$.
+Inputs: A contextual bandit algorithm $A$ and an unbiassed offline evaluation algorithm $E$.
 
 %$\hat{S}_{-i} = \bigcup \hat{s}_j  \forall j \neq i \in N $ then the expected reward given the others reports is:
 In each time period $t$ a new subject arrives and agents receive their signals $s_t$ and then send their reports $\hat{s_{t,i}}$. A one-hot encoding of the reports is used as context in $A$ to selects an arm $c_t$, then an actual choice $a_t$ is made and reward observed $r_t$.
@@ -270,7 +270,7 @@ Setting $\alpha<1/N$ ex ante bounds the total payments to the experts bellow the
 \end{mech}
 
 
-Note when a agent $i$ doesnt change the exploration policy (in expectation) then , $ \expec[r_t] -  E(\hat{s_{-i}},A)) =0  $.
+Note when a agent $i$ doesn't change the exploration policy (in expectation) then , $ \expec[r_t] -  E(\hat{s_{-i}},A)) =0  $.
 
 While a optimal report is not guaranteed to be strictly truthful, the bound on the bias of the offline contextual estimator bounds how much a deviation can benefit the 
 More practically, it appears very hard for a uninformed agent to obtain profits, or for a informed agent to find a strategy other than truthfulness that has higher expected reward.
@@ -283,13 +283,13 @@ More practically, it appears very hard for a uninformed agent to obtain profits,
 \subsection{Limitations}
 
 
-Note exploration implies learning how to interpret the signals, this, especially in the precence of multiple experts with conflicting priors, appears like the most practical application. I.e. not too woried about what we loose from having to randomize a little the choice, since this is needed for learing. 
+Note exploration implies learning how to interpret the signals, this, especially in the presence of multiple experts with conflicting priors, appears like the most practical application. I.e. not too worried about what we loose from having to randomize a little the choice, since this is needed for learning. 
 
 \DBA{this is very loose. Quantify tradeoffs if possible}
 
-This is the generalization of contextual bandits to contextual variables (signals) provided by self-interested experts who have no ingerent interest in the outcome or action, but need t be incentivated to be truthful. 
-To the degree the experts know how to interpret the (full set) learning to do it is ineficient. 
-How to incorporate this apears as a fruitful avenue for future research; that is how can a prior over the joint set of signals be elicited? 
+This is the generalization of contextual bandits to contextual variables (signals) provided by self-interested experts who have no inherent interest in the outcome or action, but need to be incentivized to be truthful. 
+To the degree the experts know how to interpret the (full set) learning to do it is inefficient. 
+How to incorporate this appears as a fruitful avenue for future research; that is how can a prior over the joint set of signals be elicited? 
 
 
 
@@ -318,16 +318,16 @@ How to incorporate this apears as a fruitful avenue for future research; that is
 
 
 %The limitation of the one shot case, of having to pay for
-The above signal only mechanism can be potentially ineficient when there are experts who know how to map the signals to actions, and thus can help the subjects avoid some of the regret in the learning.
+The above signal only mechanism can be potentially inefficient when there are experts who know how to map the signals to actions, and thus can help the subjects avoid some of the regret in the learning.
 More broadly, experts can have extra information relative to the mechanisms that helps them aggregate the signals better but requires signals by other experts to be reported to them. 
 
-In the previous chapter on the one shot setting, we saw that payments for  signals without a common prior that allows us to evaluate the coutnerfactual are problematic, in that we cannot reward useful experts more than useless ones. In the previous mechanism of this chapter, we saw that in the repeated setting this is not the case. We can use a unbiased estimator of what the rewards of a contextual bandit algoithm that didn't use a given agents signal could be used to fill in this counterfactual without requiring a prior.
+In the previous chapter on the one shot setting, we saw that payments for  signals without a common prior that allows us to evaluate the counterfactual are problematic, in that we cannot reward useful experts more than useless ones. In the previous mechanism of this chapter, we saw that in the repeated setting this is not the case. We can use a unbiased estimator of what the rewards of a contextual bandit algorithm that didn't use a given agents signal could be used to fill in this counterfactual without requiring a prior.
 
 This mechanism is the composition of the bid mechanism and signal mechanism.
 
 
 \begin{mech}\label{mech:bidbandit}[]
-Inputs: A contextial bandit algorithm $A$ and an unbiassed offline evaluation algorithm $E$.
+Inputs: A contextual bandit algorithm $A$ and an unbiassed offline evaluation algorithm $E$.
 
 
 %$\hat{S}_{-i} = \bigcup \hat{s}_j  \forall j \neq i \in N $ then the expected reward given the others reports is:
@@ -367,9 +367,9 @@ The condition that must be satisfied to make the payments from the mechanism sma
 
 
 
- A major concern is that a expert would not reveal their signal turthfully and loose out on that part of the reward, if they can benefit more from being the \emph{owner} and by widtholding their signal they can supress bids of othe experts, this is a particular conceern since the other experts may be able to achieve higher rewards.
+ A major concern is that a expert would not reveal their signal truthfully and loose out on that part of the reward, if they can benefit more from being the \emph{owner} and by withholding their signal they can suppress bids of other experts, this is a particular concern since the other experts may be able to achieve higher rewards.
 
-A natural concern is that the experts know the estimator the mechanism is using, and can place a high bid and then make a combined set of reports and chocies so the estimators realized bias is high.
+A natural concern is that the experts know the estimator the mechanism is using, and can place a high bid and then make a combined set of reports and choices so the estimators realized bias is high.
 One way to try to avoid this would be to take out the rounds where the expert $i$ won the auction when calculating the signal value of $i$, note this is biased (it could be that those are when he brings a lot of value to both the signal and the aggregation of signals, and this is indeed quite natural)
 
 
